# refactor-mcp

./: .clauderc  .gitignore  CLAUDE.md  DEVELOPMENT_TARGETS.md  GIT_WORKFLOW.md  QUICK_SETUP.md  README.md  dev-start.sh  gw.sh  hello.py  main.py  pyproject.toml  verify-changes.sh
.claude/: ct
.claude/claude-sessions/: claude-tasks.py  task_monitor.py
.claude/commands/: issue-workflow.md
.github/workflows/: claude.yml
plan/: README.md  architecture.md  cli-interface.md  data-models.md  design-principles.md  implementation-plan.md  llm-usage-patterns.md  mcp-interface.md  project-plan.md  project-structure.md  rope-provider.md
refactor_mcp/: __init__.py  __main__.py  engine.py  models.py
refactor_mcp/cli/: __init__.py
refactor_mcp/models/: __init__.py  errors.py  params.py  responses.py
refactor_mcp/providers/: __init__.py  base.py  registry.py
refactor_mcp/server/: __init__.py  main.py  tools.py
refactor_mcp/shared/: backup.py  logging.py  observability.py
scripts/: README.md  claude-headless.sh  github-secrets.sh  multi-claude.sh  setup-github-security.sh
tests/: README.md  __init__.py  conftest.py  test_cli.py  test_engine.py  test_infrastructure_demo.py  test_models.py  test_utils.py
tests/data/: __init__.py  complex_project.py  sample_module.py
tests/integration/: __init__.py  test_end_to_end_workflow.py  test_integration.py  test_multi_provider_workflows.py  test_provider_system_integration.py  test_rope_extraction_boundaries.py  test_rope_provider_extract.py  test_rope_provider_integration.py  test_rope_provider_rename.py  (+2 more)
(+43 files in other folders)
