[project]
name = "refactor-mcp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastmcp>=2.7.1",
    "pydantic>=2.11.5",
    "rope>=1.13.0",
    "typer>=0.16.0",
]

[dependency-groups]
dev = [
    "mypy>=1.16.0",
    "pydantic>=2.11.5",
    "pytest>=8.4.0",
    "ruff>=0.11.13",
]
